# LAPH

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
bindings/: python_module.cpp
examples/: demo.cpp
include/laph/: clifford_tableau.hpp  density_kernel.hpp  gf2_dense.hpp  laph.hpp  optimizer.hpp  phase.hpp  solver.hpp  types.hpp
include/laph/math/: born_clifford_sampler.hpp  clifford_phase.hpp  fabqnf.hpp  fiber_chart.hpp  hidden_rank.hpp  stationary_clifford.hpp
python/laph/: __init__.py  qiskit_backend.py
scripts/: benchmark.py
src/: clifford_tableau.cpp  density_kernel.cpp  gf2_dense.cpp  laph.cpp  optimizer.cpp  phase.cpp  solver.cpp
tests/: test_qiskit_backend.py  unit_tests.cpp
