[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11", "cmake>=3.16"]
build-backend = "scikit_build_core.build"

[project]
name = "laph"
version = "0.3.0"
description = "Lifted Affine-Phase Hypergraph Quantum Simulator"
authors = [{name = "0verflowme"}]
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
qiskit = ["qiskit>=1.0"]

[tool.scikit-build]
wheel.packages = ["python/laph"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
LAPH_BUILD_TESTS = "OFF"
LAPH_BUILD_EXAMPLES = "OFF"
